kubernetes/platform/sso/resources/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgres
  namespace: authentik
  labels:
    app: authentik-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik-postgres
  template:
    metadata:
      labels:
        app: authentik-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authentik-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgres
  namespace: authentik
  labels:
    app: authentik-postgres
spec:
  selector:
    app: authentik-postgres
  ports:
    - port: 5432
      targetPort: 5432
